immutable lists
Replaced Arrays.asList and Collections.emptyList with List.of